--- a/src/sync_app/requirements.txt
+++ b/src/sync_app/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==9.0.1
 async-generator==1.10
 attrs==23.1.0
 Automat==22.10.0
+bidict==0.22.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -12,7 +13,9 @@ cryptography==41.0.1
 cssselect==1.2.0
 curl-cffi==0.5.5
 distlib==0.3.5
+dnspython==2.3.0
 env==0.1.0
+eventlet==0.33.3
 exceptiongroup==1.1.1
 fake-useragent==1.1.3
 Faker==18.10.1
@@ -21,7 +24,9 @@ filelock==3.8.0
 Flask==2.2.2
 Flask-JWT-Extended==4.4.4
 Flask-RESTful==0.3.9
+Flask-SocketIO==5.3.4
 Flask-SQLAlchemy==3.0.2
+greenlet==2.0.2
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
@@ -65,6 +70,8 @@ PyPasser==0.0.5
 PySocks==1.7.1
 pytest==7.3.1
 python-dateutil==2.8.2
+python-engineio==4.5.1
+python-socketio==5.8.0
 pytz==2022.7.1
 PyYAML==6.0
 queuelib==1.6.2
@@ -98,6 +105,7 @@ virtualenv-clone==0.5.7
 w3lib==2.1.1
 WebOb==1.8.7
 websocket-client==1.5.1
+websockets==11.0.3
 Werkzeug==2.2.2
 wsproto==1.2.0
 zope.interface==6.0
